# spend-analyzer

./: .gitignore  README.md  constants.py  devenv.nix  main.py  parse_transactions.py  pyproject.toml  utils.py
